; ModuleID = '/home/carl/AnghaBench/RetroArch/wiiu/system/extr_memory.c_MEM2_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wiiu/system/extr_memory.c_MEM2_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MEM_BASE_HEAP_MEM2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MEM2_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load i32, i32* @MEM_BASE_HEAP_MEM2, align 4
  %7 = call i32 @MEMGetBaseHeapHandle(i32 %6)
  %8 = load i8*, i8** %2, align 8
  %9 = call i32 @MEMFreeToExpHeap(i32 %7, i8* %8)
  br label %10

10:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @MEMFreeToExpHeap(i32, i8*) #1

declare dso_local i32 @MEMGetBaseHeapHandle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
